--- a/react_poc/my-crud-app/package.json
+++ b/react_poc/my-crud-app/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.11",
     "web-vitals": "^2.1.4"
